# pydata_gam

./: Makefile  README.md  pyproject.toml  setup.py
examples/: basis_fit_nonlinear.py  basis_functions.py  california.py  cigarettessw.py  columbus.py  marginal_effect.py  microeconomics.py  microeconomics_svi.py  oecedgas.py  splines_basis.py
